--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,24 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
+  <meta name="Description" content="Smoking = OFF. Smokoff helps you stop smoking.">
+  <meta name="theme-color" content="#333333">
+  <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/png" href="assets/images/smokoff_logo_s.png">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <nav style="background-color: #de3c3c; height: 56px; width: 100%">
+    </nav>
+    <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+      <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
+   </svg>
+    <noscript>
+        <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem;">
+            Sorry, but app is not available without javascript
+        </h3>
+    </noscript>
+  </app-root>
 </body>
 </html>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
