some changes and API updated (could get info now)

--- a/src/index.html
+++ b/src/index.html
@@ -9,19 +9,21 @@
   <meta name="Description" content="Smoking = OFF. Smokoff helps you stop smoking.">
   <meta name="theme-color" content="#333333">
   <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="icon" type="image/png" href="assets/images/smokoff_logo_s.png">
 </head>
 <body>
   <app-root>
+    <noscript>
+      <h3 style="color: red; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 2rem;">
+        Sorry, but web is not available without JavaScript.
+        Please turn on JavaScript!
+      </h3>
+      <style>svg, circle { display:none; }</style>
+    </noscript>
     <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
       <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
     </svg>
-    <noscript>
-      <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem;">
-          Sorry, but app is not available without javascript
-      </h3>
-    </noscript>
   </app-root>
 </body>
 </html>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
