updated navbar and some planner and also etc

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
   <title>Smokoff</title>
   <base href="/">
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="icon" type="image/png" href="assets/images/smokoff_logo_s.png">
 </head>
-<body>
-  <app-root>
+<body class="h-100">
+  <app-root class="d-flex flex-column h-100">
     <noscript>
       <h3 style="color: red; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 2rem;">
         Sorry, but web is not available without JavaScript.
